test/samples/invalid/resolving/def_name_repeat2.maruir
struct foo {
    x: i8;
}

fun foo(b: u8, a:i16)
